python-sqlfuse (0.5.3-1) unstable; urgency=low

  * Count directory links. *Sigh*; "rm -r" doesn't work without that.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 19:13:30 +0200

python-sqlfuse (0.5.2-1) unstable; urgency=low

  * Monkeypatch twisted.python.failure.Failure.throwExceptionIntoGenerator

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 18:50:07 +0200

python-sqlfuse (0.5.1-4) unstable; urgency=low

  * Depend on python-passfd

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 17:22:23 +0200

python-sqlfuse (0.5.1-3) unstable; urgency=low

  * depend on python-argparse.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 17:04:47 +0200

python-sqlfuse (0.5.1-2) unstable; urgency=low

  * add twist.py to setup
  * install documentation

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 06 Apr 2011 17:00:26 +0200

python-sqlfuse (0.5.1-1) unstable; urgency=low

  * Remote access works, cleanup works, caching works. Good enough for now.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 05 Apr 2011 15:38:24 +0200

python-sqlfuse (0.5-1) unstable; urgency=low

  * Refactorization and database fixes for sync.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Fri, 18 Mar 2011 08:44:30 +0100

python-sqlfuse (0.4.6-1) unstable; urgency=low

  * Add a twisted.manhole login to the PB server.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 16 Mar 2011 09:35:27 +0100

python-sqlfuse (0.4.5-1) unstable; urgency=low

  * Add a cache table, to remember which files have not been fetched
    completely.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Mon, 14 Mar 2011 13:09:55 +0100

python-sqlfuse (0.4.1-1) unstable; urgency=low

  * Initial packaging.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Fri, 18 Feb 2011 20:04:58 +0100